storing offline photographs from local

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ <h1 class="title-container" id="title">News Feed</h1>
+ 
   <div class="container">
-   <h1 class="title-container">News Stand</h1>
-   <h2 id="status">STATUS</h2> 
    <ul id="list-container">
    </ul> 
   </div>
